bitfields/tests/compile_error_cases/errors/bitfield_unsupported_type.rs
use bitfields::bitfield;

#[bitfield(i32)]
pub struct Bitfield {
    a: u8,
    b: u8,
    c: u8,
}

fn main() {}
